--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "es6": true,
     "browser": true
   },
+  "parserOptions": {
+    "ecmaVersion": 9
+  },
   "extends": [
     "airbnb-base",
     "plugin:vue/vue3-recommended",
