--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "reset-css": "^5.0.1",
     "vue": "^3.0.5",
-    "vue-i18n": "^9.1.6"
+    "vue-i18n": "^9.1.6",
+    "vue-router": "^4.0.6"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^2.1.2",
