--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "remixicon": "^2.5.0",
     "reset-css": "^5.0.1",
     "vue": "^3.0.5",
     "vue-i18n": "^9.1.6",
