Add Equipment safety view
Too many whitespace. Fullfill with content or give extra margins somewhere

--- a/src/config/views/safety.yaml
+++ b/src/config/views/safety.yaml
@@ -3,3 +3,22 @@ principles:
   - equip
   - adapt
   - notify
+
+equipment:
+  essential:
+    - clothes
+    - shoes
+    - water
+    - food
+    - raincoat
+    - first_aid_kit
+    - mobile_phone
+    - map_compass
+    - sun_protection
+    - thermal_blanket
+  recommended:
+    - gps
+    - knife
+    - lighter
+    - flashlight
+    - sandals
