Add Wildlife safety view

--- a/src/config/views/safety.yaml
+++ b/src/config/views/safety.yaml
@@ -22,3 +22,18 @@ equipment:
     - lighter
     - flashlight
     - sandals
+
+species:
+  - name: amanita_muscaria
+    image:
+      url: https://source.unsplash.com/u8ffJD8KRmo/600x500
+      attribution: © photo by Henryk Piela from Unsplash
+  - name: aconitum
+    image:
+      url: https://source.unsplash.com/-7iCmNgTvKo/500x700
+      attribution: © photo by Manuel Capellari on Unsplash
+      layout: thin
+  - name: vipera_aspis
+    image:
+      url: https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Vipera_aspis_aspis.jpg/640px-Vipera_aspis_aspis.jpg
+      attribution: CC BY-SA 3.0 photo by Felix Reimann from Wikimedia Commons
