--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "reset-css": "^5.0.1",
     "vue": "^3.0.5",
     "vue-i18n": "^9.1.6",
-    "vue-router": "^4.0.6",
-    "vue-svg-inline-plugin": "^2.2.0"
+    "vue-inline-svg": "^3.0.0-beta.3",
+    "vue-router": "^4.0.6"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^2.1.2",
