--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "remixicon": "^2.5.0",
     "reset-css": "^5.0.1",
     "vue": "^3.0.5",
