--- a/src/config/views/explore.yaml
+++ b/src/config/views/explore.yaml
@@ -31,6 +31,30 @@ filters:
     - CLIMBER
     - BIKER
     - FISHER
+  distance:
+    min: 1000
+    max: 30000
+    step: 1000
+    unit:
+      type: length
+      from: m
+      to: km
+  duration:
+    min: 3600
+    max: 36000
+    step: 3600
+    unit:
+      type: time
+      from: s
+      to: h
+  drop_positive:
+    min: 0
+    max: 2000
+    step: 100
+    unit:
+      type: length
+      from: m
+      to: m
   origins:
     - CANILLO
     - ENCAMP
