--- a/src/config/global.yaml
+++ b/src/config/global.yaml
@@ -15,25 +15,25 @@ routes:
     title: vertical right top
     image:
       url: https://source.unsplash.com/NQjvaCYp0h4/500x700
-      attribution: photo by Tim Jones on Unsplash
+      attribution: © photo by Tim Jones on Unsplash
   - name: discover
     path: /discover
     title: top left
     image:
       url: https://source.unsplash.com/Nk6FHK1eyHY/500x500
-      attribution: photo by KOBU Agency on Unsplash
+      attribution: © photo by KOBU Agency on Unsplash
   - name: commitment
     path: /commitment
     title: top center
     image:
       url: https://source.unsplash.com/zbhk0949iBo/500x700
-      attribution: photo by Ian Keefes on Unsplash
+      attribution: © photo by Ian Keefes on Unsplash
   - name: snow_science
     path: snow_science
     title: bottom left
     image:
       url: https://source.unsplash.com/5867BKGyCu4/500x500
-      attribution: photo by freestocks on Unsplash
+      attribution: © photo by freestocks on Unsplash
       # url: https://source.unsplash.com/KPCXuBucEps/600x600
       # attribution: photo by Will Turner on Unsplash
   - name: explore
@@ -41,10 +41,10 @@ routes:
     title: vertical left bottom
     image:
       url: https://source.unsplash.com/Ow-joAY8NyY/800x600
-      attribution: photo by Alfred Aloushy on Unsplash
+      attribution: © photo by Alfred Aloushy on Unsplash
   - name: kids
     path: /kids
     title: top left
     image:
       url: https://source.unsplash.com/euajDE7Y7JI/300x300
-      attribution: photo by Daniel Hooper on Unsplash
+      attribution: © photo by Daniel Hooper on Unsplash
