--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vueform/slider": "^1.0.5",
     "d3": "^6.7.0",
+    "js-yaml": "^3.14.1",
     "leaflet": "^1.7.1",
     "remixicon": "^2.5.0",
     "reset-css": "^5.0.1",
