Add Memorama game

--- a/src/config/views/play.yaml
+++ b/src/config/views/play.yaml
@@ -2,3 +2,4 @@ api:
   base: app71mFwZY0ygohqZ
   tables:
     drawings: fingerpaint?filterByFormula=AND(valid)
+    cards: memorama?filterByFormula=AND(valid)
