Add guides page
Guides list with 2 simple natural language filters

[+] Add Selector component to replace uncustomizable default select element

--- a/src/config/global.yaml
+++ b/src/config/global.yaml
@@ -41,6 +41,12 @@ routes:
     image:
       url: https://source.unsplash.com/Ow-joAY8NyY/800x600
       attribution: © photo by Alfred Aloushy on Unsplash
+  - name: guides
+    path: /guides
+    title: vertical bottom right
+    image:
+      url: https://source.unsplash.com/2mg-3crJFgk/400x500
+      attribution: © photo by Alyi Kazal on Unsplash
   - name: play
     path: /play
     title: top left
