Prepare for production
[+] Set proper name, version and favicon
[ ! ] Include vue-i18n compiler on build to allow async message loading from remote locations

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite app",
-  "version": "0.0.0",
+  "name": "screens",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
