--- a/src/config/apis.yaml
+++ b/src/config/apis.yaml
@@ -1,17 +1,49 @@
 airtable:
   discover:
-    base: app3qBEiTWF9mXkoa
-    concepts: concepts?filterByFormula=AND(ready)
+    concepts:
+      table: concepts
+      options:
+        base: app3qBEiTWF9mXkoa
+        index: true
+        persist: true
+        where:
+          ready:
+            checked: true
   
   explore:
-    base: appMWr6cRQN40oIM2
-    trails: trails?filterByFormula=AND(ready)
+    trails:
+      table: trails
+      options:
+        base: appMWr6cRQN40oIM2
+        sort:
+          duration: asc
+        where:
+          ready:
+            checked: true
 
   games:
-    base: app71mFwZY0ygohqZ
-    drawings: fingerpaint?filterByFormula=AND(ready)
-    cards: memorama?filterByFormula=AND(ready)
+    drawings:
+      table: fingerpaint
+      options:
+        base: app71mFwZY0ygohqZ
+        where:
+          ready:
+            checked: true
+    cards:
+      table: memorama
+      options:
+        base: app71mFwZY0ygohqZ
+        where:
+          ready:
+            checked: true
 
   guides:
-    base: appVcIFg2pVGQ7IKU
-    guides: guides?filterByFormula=AND(ready)&sort[0][field]=surname&sort[0][direction]=asc
+    guides:
+      table: guides
+      options:
+        base: appVcIFg2pVGQ7IKU
+        sort:
+          surname: asc
+        where:
+          ready:
+            checked: true
