--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@rollup/plugin-yaml": "^3.0.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
