--- a/.eslintrc
+++ b/.eslintrc
@@ -33,20 +33,18 @@
     }],
     "vue/max-attributes-per-line": ["error", {
       "singleline": 3,
-      "multiline": {
-        "max": 1,
-        "allowFirstLine": false
-      }
+      "multiline": 1
     }],
     "vue/singleline-html-element-content-newline": "off",
+    "vue/multi-word-component-names": "off",
     "import/no-absolute-path": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   },
   "settings": {
     "import/resolver": {
-      alias: {
-        map: [['/@', './src']],
-        extensions: ['.js', '.json', '.vue', '.yaml']
+      "alias": {
+        "map": [["/@", "./src"]],
+        "extensions": [".js", ".json", ".vue", ".yaml"]
       }
     }
   }
