--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,8 @@
 {
-  "extends": "stylelint-config-standard",
-  "plugins": ["stylelint-scss"],
+  "extends": "stylelint-config-standard-scss",
   "rules": {
+    "string-quotes": "single",
+    "custom-property-pattern": ".+",
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true
   }
