--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
+    "lint": "eslint src && stylelint src/styles/*.scss",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -35,8 +36,7 @@
     "eslint-plugin-vue": "^8.4.0",
     "sass": "^1.32.11",
     "stylelint": "^14.3.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-scss": "^4.1.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "vite": "^2.2.3"
   }
 }
