fix: Update dependencies and deprecated imports

--- a/package.json
+++ b/package.json
@@ -3,40 +3,40 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "lint": "eslint src && stylelint src/styles/*.scss",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
-    "@vueform/slider": "^2.0.8",
-    "d3": "^7.3.0",
+    "@vueform/slider": "^2.1.2",
+    "d3": "^7.6.1",
     "js-yaml": "^4.1.0",
-    "leaflet": "^1.7.1",
-    "painless-airtable": "^0.2.1",
+    "leaflet": "^1.8.0",
+    "painless-airtable": "^0.2.4",
     "qrcode.vue": "^3.3.3",
     "remarkable": "^2.0.1",
     "remixicon": "^2.5.0",
     "reset-css": "^5.0.1",
     "units-converter": "^1.0.3",
-    "vue": "^3.0.5",
-    "vue-i18n": "^9.1.6",
+    "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vue-inline-svg": "^3.0.0-beta.3",
-    "vue-router": "^4.0.6",
+    "vue-router": "^4.1.3",
     "vue-router-animations": "gist:bd502b019ba91f8f70b3a8f5cbb6f4d8"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
-    "@rollup/plugin-yaml": "^3.0.0",
-    "@vitejs/plugin-vue": "^2.1.0",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.8.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@rollup/plugin-yaml": "^3.1.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/compiler-sfc": "^3.2.37",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-vue": "^8.4.0",
-    "sass": "^1.32.11",
-    "stylelint": "^14.3.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "vite": "^2.2.3"
+    "eslint-plugin-vue": "^9.3.0",
+    "sass": "^1.54.4",
+    "stylelint": "^14.10.0",
+    "stylelint-config-standard": "^27.0.0",
+    "stylelint-scss": "^4.3.0",
+    "vite": "^3.0.7"
   }
 }
