--- a/src/config.yaml
+++ b/src/config.yaml
@@ -29,7 +29,7 @@ modules:
     path: /discover
     title: top left
     image:
-      url: https://source.unsplash.com/Nk6FHK1eyHY/500x500
+      url: /images/jpeg/Nk6FHK1eyHY_500_500.jpeg
       attribution: © photo by KOBU Agency on Unsplash
     transitions:
       title: fade-down
@@ -38,7 +38,7 @@ modules:
     path: /commitment
     title: top right
     image:
-      url: https://source.unsplash.com/zbhk0949iBo/500x700
+      url: /images/jpeg/zbhk0949iBo_500_700.jpeg
       attribution: © photo by Ian Keefes on Unsplash
     transitions:
       title: fade-down
@@ -47,7 +47,7 @@ modules:
     path: snow_science
     title: bottom left
     image:
-      url: https://source.unsplash.com/5867BKGyCu4/500x500
+      url: /images/jpeg/5867BKGyCu4_500_500.jpeg
       attribution: © photo by freestocks on Unsplash
       # url: https://source.unsplash.com/KPCXuBucEps/600x600
       # attribution: photo by Will Turner on Unsplash
@@ -58,7 +58,7 @@ modules:
     path: /explore
     title: vertical left bottom
     image:
-      url: https://source.unsplash.com/Ow-joAY8NyY/800x600
+      url: /images/jpeg/Ow-joAY8NyY_800_600.jpeg
       attribution: © photo by Alfred Aloushy on Unsplash
     transitions:
       title: fade-right
@@ -67,7 +67,7 @@ modules:
     path: /guides
     title: vertical bottom right
     image:
-      url: https://source.unsplash.com/2mg-3crJFgk/400x500
+      url: /images/jpeg/2mg-3crJFgk_400_500.jpeg
       attribution: © photo by Alyi Kazal on Unsplash
     transitions:
       title: fade-left
@@ -76,7 +76,7 @@ modules:
     path: /play
     title: top left
     image:
-      url: https://source.unsplash.com/W4zYlDBAy4w/400x300
+      url: /images/jpeg/W4zYlDBAy4w_400_300.jpeg
       attribution: © photo by Chase B. on Unsplash
     transitions:
       title: fade-down
